--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -24,6 +24,18 @@ body {
   height: 50px;
 }
 
+.hamburguer ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
+.hamburguer li {
+  float: left;
+  display: block;
+}
+
 nav ul {
   list-style-type: none;
   padding: 0;
@@ -61,6 +73,11 @@ header {
   
 }
 
+.hamburguer{
+  display: none;
+  margin-right: auto;
+}
+
 header nav {
   margin-right: auto;
 }
@@ -84,6 +101,16 @@ header input {
 }
 
 @media (max-width: 900px) {
+  
+  header nav{
+    display: none;
+  }
+
+  .hamburguer{
+    display: flex;
+
+  }
+
   .nav_menu li {
     float: none;
     display: none;
