--- a/src/paginas/perfilcss.module.css
+++ b/src/paginas/perfilcss.module.css
@@ -3,7 +3,7 @@
     src: url(../imagens/fontes/coolvetica/coolvetica\ rg.otf);
 }
 
-
+/*
 body {
     background-color: #1D0924;;
     margin: 0;
@@ -208,5 +208,5 @@ header input {
 .iconeart:hover {
    cursor: pointer;
 }
-
+*/
 
