--- a/src/components/layout/post/Modal.module.css
+++ b/src/components/layout/post/Modal.module.css
@@ -14,3 +14,22 @@
 .icon {
   padding-left: 20px;
 }
+
+.titulo{
+  width: 100%;
+  border: none;
+  outline: none;
+  padding-left: 5px;
+  font-size: 30px;
+  font-family: coolvetica;
+}
+
+.descricao{
+  width: 100%;
+  border: none;
+  outline: none;
+  border-top: 5px;
+  padding-left: 5px;
+  font-size: 20px;
+  font-family: coolvetica;
+}
