--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -6,10 +6,7 @@
 body {
   height: 100%;
   background-color: #481563;
-  background-image:
-    linear-gradient(
-      #220830, #3b0a52
-    );
+  background-image: linear-gradient(#220830, #3b0a52);
   background-repeat: no-repeat;
   background-attachment: fixed;
   margin: 0;
@@ -17,14 +14,20 @@ body {
 }
 
 .icon {
+  transition: all 0.15s;
   height: 40px;
+}
+
+.icon:hover {
+  transform: scale(1.10);
+  height: 45px;
+  width: 45px;
+  cursor: pointer;
 }
 
 .logo {
   height: 50px;
 }
-
-
 
 nav ul {
   list-style-type: none;
@@ -43,7 +46,7 @@ hr {
 }
 
 .header_container {
-  border-bottom: white solid 1px;
+  
   position: sticky;
   top: 0;
   background-color: #1d0924;
@@ -59,10 +62,7 @@ header {
   margin: auto;
   max-width: 1320px;
   align-self: center;
-  
-  
 }
-
 
 header nav {
   margin-right: auto;
@@ -87,12 +87,9 @@ header input {
 }
 
 @media (max-width: 900px) {
-  
-  header nav{
+  header nav {
     display: none;
   }
-
-  
 
   .nav_menu li {
     float: none;
@@ -118,7 +115,7 @@ header input {
 
 @media (max-width: 1300px) {
   .icon {
-    height: 30px;
+    height: 40px;
   }
 
   header {
@@ -136,7 +133,12 @@ header input {
     height: 40px;
   }
 
+  .search{
+    display: none;
+  }
+
   header input {
+    display: none;
     height: 35px;
     margin-right: 70%;
     margin-left: -70%;
