--- a/src/components/posts/postAudio/postsAudio.module.css
+++ b/src/components/posts/postAudio/postsAudio.module.css
@@ -38,10 +38,16 @@
   }
   
   .icon {
-    
     height: 20px;
+    position: relative;
+    transition: all 0.15s;
   }
   
+  .icon:hover {
+    transform: scale(1.10);
+    height: 25px;
+    cursor: pointer;
+  }
   .content {
     padding: 0;
     padding-right: 1rem;
