--- a/src/components/posts/postImagem/posts_imagem.module.css
+++ b/src/components/posts/postImagem/posts_imagem.module.css
@@ -43,9 +43,16 @@
 }
 
 .icon {
-  
   height: 20px;
   position: relative;
+  transition: all 0.15s;
+}
+
+
+.icon:hover {
+  transform: scale(1.10);
+  height: 25px;
+  cursor: pointer;
 }
 
 .content {
