--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -122,9 +122,10 @@ header input {
     padding: 0;
     justify-content: flex-end;
     margin: 0;
-    width: 24rem;
+    width: 90%;
     background-color: #1d0924;
     overflow: hidden;
+
   }
 
   header nav {
