--- a/src/paginas/paginainicial.css
+++ b/src/paginas/paginainicial.css
@@ -25,6 +25,7 @@ main{
     background-color: #2A1132;
     box-shadow: 4px 0px rgba(0, 0, 0, 0.25) ;
     margin-left: 50px;
+    min-height: 100vh;
   }
   
   .side{
