--- a/src/components/layout/comentario/comentario.module.css
+++ b/src/components/layout/comentario/comentario.module.css
@@ -1,5 +1,5 @@
-.comentario{
-    width: 100%;
+/*  .comentario{
+    width: 90%;
     border: none;
     outline: none;
     border-top: 5px;
@@ -7,10 +7,9 @@
     font-size: 20px;
     font-family: coolvetica;
     resize: none;
-    
-   height: auto;
-   width: 100%;
-   margin-left: auto;
+    height: auto;
+    width: 100%;
+    margin-left: auto;
   }
 
   .userFoto{
@@ -35,7 +34,63 @@
   .fundo{
     min-width: 24rem;
     width: 24rem;
-    
   }
+  }
+*/
+
+.item {
+  overflow: hidden;
+  max-width: 34.375rem;
+  width:  34.375rem;
+  margin-bottom: 10px;
+}
+
+.user{
+  padding: 0;
+  margin-bottom: 0.1rem;
+  padding-right: 1rem;
+  padding-left: 0.3rem;
+  display: flex;
+}
+
+
+.userImage{
+  margin-top: 5px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50px;
+}
+
+.item {
+  background-color:#fff7fb;
+}
+
+.content {
+  padding: 0;
+  padding-right: 1rem;
+  padding-left: 1rem;
+}
+
+.content p{
+  margin: 5px;
+}
+
+.content h3 {
+  font-size: 1.25rem;
+  color: black;
+  margin: 5px;
+}
+ul {
+  list-style-type:none;
+  margin: 0;
+  padding: 0;
   
-  }
+}
+
+@media (max-width: 900px){
+
+.item{
+  width: 24rem;
+}
+
+}
