--- a/src/components/layout/comentario/comentario.module.css
+++ b/src/components/layout/comentario/comentario.module.css
@@ -1,41 +1,4 @@
-/*  .comentario{
-    width: 90%;
-    border: none;
-    outline: none;
-    border-top: 5px;
-    padding-left: 5px;
-    font-size: 20px;
-    font-family: coolvetica;
-    resize: none;
-    height: auto;
-    width: 100%;
-    margin-left: auto;
-  }
-
-  .userFoto{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-    margin-top: 5px;
-    margin-left: 5px;
-  }
-
-.fundo{
-  background-color: #fff7fb;
-  box-shadow: 0 3px 6px black;
-  min-width: 34.375rem;
-  padding-top: 0.3rem;
-  overflow: hidden;
-}
-
-@media (max-width: 900px){
-
-  .fundo{
-    min-width: 24rem;
-    width: 24rem;
-  }
-  }
+/*  
 */
 
 .item {
