--- a/src/components/layout/searchBar.css
+++ b/src/components/layout/searchBar.css
@@ -1,4 +1,4 @@
-.pesquisa input{
+.pesquisa input {
   display: flex;
   width: 300px;
   height: 35px;
@@ -12,8 +12,8 @@
   font-size: 20px;
   font-family: coolvetica;
 }
-  
-.dataResult{
+
+.dataResult {
   margin-top: 5px;
   width: 355px;
   height: 200px;
@@ -21,7 +21,7 @@
   background-color: white;
   overflow: hidden;
   overflow-y: auto;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   position: absolute;
 }
 
@@ -30,7 +30,7 @@
   background: transparent;
 }
 
-.dataResult .dataItem{
+.dataResult .dataItem {
   width: 100%;
   height: 50px;
   display: flex;
@@ -38,14 +38,14 @@
   color: black;
 }
 
-.results p{
+.results p {
   margin-left: 7%;
 }
 
-.results a{
+.results a {
   text-decoration: none;
 }
 
-.results a:hover{
+.results a:hover {
   background-color: #f2f2f2;
 }
