--- a/src/components/layout/comentario/MakeComent/makeComent.module.css
+++ b/src/components/layout/comentario/MakeComent/makeComent.module.css
@@ -21,6 +21,8 @@
   border-radius: 10px;
   background-color: #8d41ac;
   vertical-align: 1rem;
+  color: aliceblue;
+  font-weight:bolder;
 }
 
 .post:hover {
