--- a/src/components/marketPlace/marketItem.module.css
+++ b/src/components/marketPlace/marketItem.module.css
@@ -1,20 +1,24 @@
 .container {
+  background-color: transparent;
+  margin: 30px;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   max-width: 1500px;
   flex-wrap: wrap;
+  
 }
 
 .container .card {
+  max-height: 500px;
   position: relative;
   width: 250px;
-  height: 390px;
-  margin: 30px;
+  height: 450px;
   box-shadow: 5px 5px 25px rgb(0, 0, 0.5);
   border-radius: 15px;
-  background: rgba(255, 255, 255, 0.1);
+  background-color: transparent;
+  
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -60,10 +64,11 @@
 
 .container .card .content a:hover {
   background-color: #d687f8;
+  cursor: pointer;
 }
 
 .content img {
-  height: 180px;
-  width: 180x;
+  max-height: 250px;
+  width: 250px;
   margin-top: -37px;
 }
