--- a/src/components/marketPlace/marketPage.module.css
+++ b/src/components/marketPlace/marketPage.module.css
@@ -22,6 +22,7 @@ body {
   
 }
 
+
 h2 {
   color:aliceblue ;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -91,15 +92,18 @@ h2 {
 } 
 
 .main {
+  align-items: center;
   display: flex;
-  height: 130%;
- 
+  height: 50%;
+  z-index: 10;
+  position: relative;
+  position: fixed;
+  top: 20vh;
+  text-align: center;
+  left: calc(40% - 15rem);
+
 }
 
-.center {
-  width: 100%;
-  text-align: center;
-}
 
 .btn {
   background: none;
@@ -116,8 +120,6 @@ h2 {
   width: 60%;
   height: 2%;
   font-size: 0.8em;
-  
-  
 }
 
 .btn:hover {
@@ -147,17 +149,18 @@ h2 {
   align-items: center;
   max-width: 8000px;
   flex-wrap: wrap;
+  width: 1000px;
+  
   
 }
 
 
-.caixa .cartao {
+.cartao {
   position: relative;
-  width: 1200px;
-  height: 700px;
+  
   margin: 30px;
   border-radius: 15px;
-  background: rgba(255, 255, 255, 0.089);
+  background-color: rgb(33, 8, 48);
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -168,16 +171,15 @@ h2 {
 
 }
 
-.caixa .cartao .produto {
+.produto {
   padding: 20px;
   text-align: center;
   transition: 0.5s;
   font-size: 1.3em;
   color: #fff;
-  flex-direction: column;
   display: flex;
   flex-direction: row;
-  
+  width: 1200px;
 }
 
 
@@ -194,35 +196,37 @@ h2 {
  
 }
 
-.caixa .cartao .produto a {
+.produto button {
   background: none;
-  padding: 18px 58px;
+  padding: 10px 12px;
   color: #f0caff;
   font-size: 0.7rem;
   text-decoration: none;
-  text-transform: uppercase;
   font-weight: bold;
   background-color: #2c0d38;
-  border-radius: 4%;
+  border-radius: 10px;
   transition: .3s ease;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
-  width: 80%;
-  height: 5%;
+  width: 20%;
   font-size: 0.8em;
   margin-top: 20px;
   
 }
 
-.caixa .cartao .produto a:hover {
+.produto button:hover {
   transform: scale(1.10);
-  padding: 22px 62px;
   background-color: #ecbfff;
   color: #32233f;
 }
 
-.produto img {
-  height: 100px;
-  width: 500px;
+
+.produtoImagem{
+  float: left;
+}
+
+.produtoImagem img{
+  width: 300px;
+  float: left;
+  margin: 30px;
 }
 
 .modal{
@@ -270,20 +274,12 @@ h2 {
   align-items: center;
 }
 
-.UploadImagem {
-  background-color: #f0caff;
-  height: 500px;
-  width: 730px;
-  margin-top: -37px;
-  margin-right: 120px;
-  text-align: center;
-  font-size: 24px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #ae7bc2;
+.produtoLateral{
+  padding-top: 10%;
+  float: right;
+  vertical-align: middle;
+  padding-right: 10px;
 }
-
 
 .produtoLateral h3 {
   font-size: 23px;
