--- a/src/paginas/marketPlace.css
+++ b/src/paginas/marketPlace.css
@@ -8,6 +8,8 @@ h2 {
   display: flex;
   height: 100%;
   background-image: url(../imagens/marketplace/teste2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .lateral {
@@ -55,9 +57,9 @@ h2 {
   font-weight: bold;
   background-color: #ecbbff;
   border-radius: 3%;
-
+  cursor: pointer;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  width: 60%;
+  width: 80%;
   height: 2%;
   font-size: 0.8em;
   margin-top: 10px;
