--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -16,7 +16,19 @@ body {
 
 .icon {
   transition: all 0.15s;
-  height: 40px;
+  height: 30px;
+}
+
+.iconconf {
+  transition: all 0.15s;
+  height: 30px;
+}
+
+.iconconf:hover {
+  transform: scale(1.15);
+  cursor: pointer;
+  transition: .3s ease;
+  transform: rotate(60deg);
 }
 
 .icon:hover {
