--- a/src/components/marketPlace/key/keyCreate.module.css
+++ b/src/components/marketPlace/key/keyCreate.module.css
@@ -40,6 +40,7 @@ button {
     color: aliceblue;
     text-decoration: none;
     border: none;
+    background-image: none;
 }
 
 .dados1 {
@@ -54,4 +55,5 @@ button {
     color: aliceblue;
     text-decoration: none;
     border: none;
+    background-image: none;
 }
