--- a/src/paginas/paginaConfig.module.css
+++ b/src/paginas/paginaConfig.module.css
@@ -16,3 +16,45 @@
     margin-right: auto;
     height: 100%;
   }
+
+  .imgHeader {
+    background-color: #cebfda;
+    width: 155px;
+    height: 155px;
+    padding: 3px;
+    border-radius: 50%;
+    margin-top: 0px;
+    transition: 0.1s ease;
+  }
+  
+  .imgHeader > input {
+    display: none;
+  }
+  
+
+  input {
+    width: 300px;
+    height: 35px;
+    padding: 0px 0px;
+    border-radius: 10px;
+    background-image: url("../imagens/MainNavigation/searchicon.png");
+    background-size: 35px 35px;
+    background-position: 5px 0px;
+    background-repeat: no-repeat;
+    padding-left: 50px;
+    font-size: 20px;
+    font-family: coolvetica;
+  }
+
+  .imgHeader img {
+    background-color: #cebfda;
+    width: 155px;
+    height: 155px;
+    border-radius: 50%;
+    transition: 0.1s ease;
+    cursor: pointer;
+  }
+  
+  .imgHeader:hover {
+    transform: scale(1.1);
+  }
